- Fix issues for top nav when collapsed

--- a/src/main/webapp/static/app/styles/less/side-nav.less
+++ b/src/main/webapp/static/app/styles/less/side-nav.less
@@ -1,15 +1,3 @@
-#side-nav-wrapper {
-  display: none !important;
-}
-
-@media(min-width: @grid-float-breakpoint) {
-  #side-nav-wrapper {
-    display: block !important;
-    position: absolute;
-    width: @side-bar-width;
-  }
-}
-
 .side-nav {
   position: relative;
   background-color: @default-bg;
